tests/NormalTests/paczka1/small_fuzzy/11158158.err
Error in line 3: 9pEwMB S821 79,3
Error in line 5: S22 S22 79,7
Error in line 2: 4cGloW S821 89,0
